script-answers/exercise12_8.txt
PS C:\Learming\fso\fso12\part12-containers-applications\todo-app\todo-backend> docker volume ls
DRIVER    VOLUME NAME
local     8d12f43ef45035875001893489db3977adf9d397d166e3cbc03b9b1d69a98c4c
local     b4e0c20b171155e7ff42b078c53595bc90f31f273ab1eef64c22eb51838c074c
local     todo-backend_mongo_data
PS C:\Learming\fso\fso12\part12-containers-applications\todo-app\todo-backend> docker volume inspect todo-backend_mongo_data
[
    {
        "CreatedAt": "2026-02-24T13:40:31Z",
        "Driver": "local",
        "Labels": {
            "com.docker.compose.config-hash": "04a085ca56ca9326ae3e24058b0dc2a710003ba3ca583a2e333b4d6c491cfb94",
            "com.docker.compose.project": "todo-backend",
            "com.docker.compose.version": "5.0.2",
            "com.docker.compose.volume": "mongo_data"
        },
        "Mountpoint": "/var/lib/docker/volumes/todo-backend_mongo_data/_data",
        "Name": "todo-backend_mongo_data",
        "Options": null,
        "Scope": "local"
    }
]
PS C:\Learming\fso\fso12\part12-containers-applications\todo-app\todo-backend> docker container ls                          
CONTAINER ID   IMAGE               COMMAND                  CREATED             STATUS             PORTS                                           NAMES
11d394ad1dc0   initialized-mongo   "docker-entrypoint.s…"   About an hour ago   Up About an hour   0.0.0.0:3456->27017/tcp, [::]:3456->27017/tcp   todo-backend-mongo-1
PS C:\Learming\fso\fso12\part12-containers-applications\todo-app\todo-backend> docker exec -it 11d394ad1dc0
docker: 'docker exec' requires at least 2 arguments

Usage:  docker exec [OPTIONS] CONTAINER COMMAND [ARG...]

See 'docker exec --help' for more information
PS C:\Learming\fso\fso12\part12-containers-applications\todo-app\todo-backend> docker exec -it 11d394ad1dc0 bash
root@11d394ad1dc0:/# mongosh
Current Mongosh Log ID: 699dbe9c6c45275a758563b0
Connecting to:          mongodb://127.0.0.1:27017/?directConnection=true&serverSelectionTimeoutMS=2000&appName=mongosh+2.7.0
Using MongoDB:          undefined
Using Mongosh:          2.7.0

For mongosh info see: https://www.mongodb.com/docs/mongodb-shell/


To help improve our products, anonymous usage data is collected and sent to MongoDB periodically (https://www.mongodb.com/legal/privacy-policy).
You can opt-out by running the disableTelemetry() command.

test> show dbs
MongoServerError[Unauthorized]: Command listDatabases requires authentication
test> mongosh -u root -p example
Uncaught:
SyntaxError: Missing semicolon. (1:10)

> 1 | mongosh -u root -p example
    |           ^
  2 |

test>
(To exit, press Ctrl+C again or Ctrl+D or type .exit)
test> exit
root@11d394ad1dc0:/# mongosh -u root -p example
Current Mongosh Log ID: 699dbf460af2314ff98563b0
Connecting to:          mongodb://<credentials>@127.0.0.1:27017/?directConnection=true&serverSelectionTimeoutMS=2000&appName=mongosh+2.7.0
Using MongoDB:          8.2.5
Using Mongosh:          2.7.0

For mongosh info see: https://www.mongodb.com/docs/mongodb-shell/

------
   The server generated these startup warnings when booting
   2026-02-24T13:44:50.951+00:00: Using the XFS filesystem is strongly recommended with the WiredTiger storage engine. See http://dochub.mongodb.org/core/prodnotes-filesystem
   2026-02-24T13:44:51.527+00:00: For customers running the current memory allocator, we suggest changing the contents of the following sysfsFile
   2026-02-24T13:44:51.527+00:00: For customers running the current memory allocator, we suggest changing the contents of the following sysfsFile
   2026-02-24T13:44:51.527+00:00: We suggest setting the contents of sysfsFile to 0.
   2026-02-24T13:44:51.527+00:00: We suggest setting swappiness to 0 or 1, as swapping can cause performance problems.
------

test> show dbs
admin         100.00 KiB
config         96.00 KiB
local          64.00 KiB
the_database   56.00 KiB
test> use the_database
switched to db the_database
the_database> show collections
todos
the_database> db.todos.find({})
[
  {
    _id: ObjectId('699daa5c30e0ba420c8563b1'),
    text: 'Write code',
    done: true
  },
  {
    _id: ObjectId('699daa5c30e0ba420c8563b2'),
    text: 'updated text',
    done: true
  }
]
the_database> db.todos.create({text: 'Increase the number of tools in my tool belt',
|     done: false})
TypeError: db.todos.create is not a function
the_database> db.todos.insertOne({text: 'Increase the number of tools in my tool belt',
|     done: false})
{
  acknowledged: true,
  insertedId: ObjectId('699dc0760af2314ff98563b1')
}
the_database>